--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@revolist/vue-datagrid": "^3.0.98",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-good-table": "^2.21.11",
+    "vue-materialize-datatable": "^1.0.4",
+    "vue-router": "^3.2.0",
+    "vue2-gmap-custom-marker": "^6.0.1",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
